--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,16 +1,39 @@
-exchange: coinbase
+exchange: kraken
 
-symbols:
-  - "BTC/USD"
-  - "ETH/USD"
+api:
+  # Leave blank to use environment variables API_KEY / API_SECRET from .env
+  key: ""
+  secret: ""
 
-timeframe: "5m"
-poll_seconds: 60
-cooldown_minutes: 10
-csv_log: "benson_signals.csv"
+market:
+  base: ETH
+  quote: USD
+  symbol: ETH/USD
 
-rsi:
-  period: 14
-  buy_threshold: 30
-  sell_threshold: 70
-x
+trading:
+  position_size_usd: 50
+  max_open_trades: 1
+  slippage_bps: 5   # 5 bps = 0.05%
+
+risk:
+  stop_loss_pct: 0.03
+  take_profit_pct: 0.06
+
+signals:
+  rsi:
+    period: 14
+    buy_threshold: 30
+    sell_threshold: 70
+  ma:
+    fast: 20
+    slow: 50
+
+engine:
+  poll_seconds: 15
+  timeframes:
+    - 5m
+    - 15m
+
+logging:
+  level: INFO
+  file: logs/bot.log
