--- a/config/trading_config.json
+++ b/config/trading_config.json
@@ -3,8 +3,15 @@
   "position_size": 0.02,
   "ml_enabled": true,
   "compound_profits": true,
-  "trading_pairs": ["BTC/USD", "ETH/USD", "SOL/USD"],
-  "exchanges": ["kraken", "coinbase"],
+  "trading_pairs": [
+    "BTC/USD",
+    "ETH/USD",
+    "SOL/USD"
+  ],
+  "exchanges": [
+    "kraken",
+    "coinbase"
+  ],
   "risk_settings": {
     "stop_loss_pct": 5,
     "take_profit_pct": 10,
@@ -23,5 +30,52 @@
     "sentiment": {
       "min_confidence": 0.65
     }
-  }
+  },
+  "signals": [
+    {
+      "name": "RSI",
+      "weight": 0.1,
+      "correlation": 0.7
+    },
+    {
+      "name": "MACD",
+      "weight": 0.1,
+      "correlation": 0.65
+    },
+    {
+      "name": "Bollinger",
+      "weight": 0.1,
+      "correlation": 0.6
+    },
+    {
+      "name": "Volume",
+      "weight": 0.1,
+      "correlation": 0.5
+    },
+    {
+      "name": "Sentiment",
+      "weight": 0.1,
+      "correlation": 0.4
+    },
+    {
+      "name": "Port_Congestion",
+      "weight": 0.15,
+      "correlation": 0.05
+    },
+    {
+      "name": "Diesel_Mining",
+      "weight": 0.1,
+      "correlation": 0.08
+    },
+    {
+      "name": "Supply_Chain",
+      "weight": 0.15,
+      "correlation": 0.03
+    },
+    {
+      "name": "Container_Rates",
+      "weight": 0.1,
+      "correlation": 0.07
+    }
+  ]
 }
