--- a/requirements.txt
+++ b/requirements.txt
@@ -21,6 +21,8 @@ python-dateutil==2.9.0.post0
 pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.5
+schedule==1.2.1
+seaborn==0.13.1
 six==1.17.0
 typing_extensions==4.14.1
 tzdata==2025.2
@@ -29,3 +31,10 @@ yarl==1.20.1
 fastapi==0.115.6
 uvicorn[standard]==0.34.0
 pydantic==2.10.4
+tensorflow==2.16.1
+scikit-learn==1.4.1
+matplotlib==3.9.0
+joblib==1.4.2
+statsmodels==0.15.0
+optuna==3.5.0
+tensorboard==2.16.1
