--- a/requirements.txt
+++ b/requirements.txt
@@ -52,7 +52,7 @@ jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
 keras==3.10.0
 kiwisolver==1.4.7
-libclang==18.1.1
+lightgbm==4.5.0
 lxml==6.0.1
 Markdown==3.9
 markdown-it-py==3.0.0
@@ -127,3 +127,4 @@ Werkzeug==3.1.3
 wrapt==1.17.3
 yarl==1.20.1
 zipp==3.23.0
+inquirer==3.4.0
