Complete multi-signal integration and live trading bot updates
- Integrated complete multi-signal system with all 9 signal modules
- Added MultiSignalAggregatorModule as sole decision point
- Implemented live trading bot with auto-liquidation
- Updated budget management and risk controls
- Added new ML models and regime detection
- Enhanced strategy engine and backtesting capabilities
- Added comprehensive testing and validation
- Updated configuration and system status tracking

--- a/strategies/sideways_market/config.yaml
+++ b/strategies/sideways_market/config.yaml
@@ -20,6 +20,11 @@ signals:
       - vol_imbalance
       - price_change_pct
 
+trading:
+  initial_capital: 10000
+  fees:
+    taker_bps: 25
+
 risk_management:
   max_positions: 6
   max_risk_per_trade: 0.10
