--- a/config/config.yaml
+++ b/config/config.yaml
@@ -37,3 +37,28 @@ rsi:
 timeframe: 5m
 poll_seconds: 30
 csv_log: benson_signals.csv
+
+# ML Model Configuration for Strategy Trainer v2
+model_params:
+  objective: 'binary'
+  metric: 'binary_logloss'
+  boosting_type: 'gbdt'
+  num_leaves: 31
+  learning_rate: 0.05
+  feature_fraction: 0.9
+  bagging_fraction: 0.8
+  bagging_freq: 5
+  verbose: -1
+
+training_params:
+  test_size: 0.2
+  random_state: 42
+  early_stopping_rounds: 50
+  num_boost_round: 1000
+
+preprocessing:
+  clip_percentiles: [1.0, 99.0]
+  remove_constants: true
+  handle_missing: 'median'
+
+logging_level: 'INFO'
