--- a/strategies/bull_market/config.yaml
+++ b/strategies/bull_market/config.yaml
@@ -20,6 +20,11 @@ signals:
       - vol_imbalance
       - price_change_pct
 
+trading:
+  initial_capital: 10000
+  fees:
+    taker_bps: 25
+
 risk_management:
   max_positions: 8
   max_risk_per_trade: 0.12
