Switch repo defaults to Kraken

--- a/config/trading_config.json
+++ b/config/trading_config.json
@@ -9,8 +9,7 @@
     "SOL/USD"
   ],
   "exchanges": [
-    "kraken",
-    "coinbase"
+    "kraken"
   ],
   "risk_settings": {
     "stop_loss_pct": 5,
