--- a/logging_config.json
+++ b/logging_config.json
@@ -9,12 +9,18 @@
       "format": "%(asctime)s [%(levelname)s] %(name)s (%(filename)s:%(lineno)d): %(message)s"
     }
   },
+  "filters": {
+    "redact": {
+      "()": "logging_filters.RedactFilter"
+    }
+  },
   "handlers": {
     "console": {
       "class": "logging.StreamHandler",
       "level": "INFO",
       "formatter": "standard",
-      "stream": "ext://sys.stdout"
+      "stream": "ext://sys.stdout",
+      "filters": ["redact"]
     },
     "file_handler": {
       "class": "logging.handlers.RotatingFileHandler",
@@ -23,7 +29,8 @@
       "filename": "logs/automated_trader.log",
       "maxBytes": 10485760,
       "backupCount": 5,
-      "encoding": "utf8"
+      "encoding": "utf8",
+      "filters": ["redact"]
     }
   },
   "loggers": {
@@ -38,7 +45,7 @@
       "handlers": ["console", "file_handler"]
     },
     "CryptoSelector": {
-      "level": "INFO", 
+      "level": "INFO",
       "propagate": false,
       "handlers": ["console", "file_handler"]
     }
