feat(trading): dynamic symbol selector + preflight combo; default SELL=market for reliable exits; raise max_open_trades=10; expand symbols
- ExchangeAdapter: side-specific order defaults (SELL->market)
- dynamic_crypto_selector: scan USD spot markets, score by vol*log(volume), CLI + config update
- scripts/preflight_config_symbols.py: preflight BUY/SELL across config symbols (no placement)
- Makefile: add select-dynamic and refresh-and-preflight convenience targets
- config/config.yaml: add BTC/ETH/SOL/DOGE/XRP and set max_open_trades=10

--- a/requirements-runtime.txt
+++ b/requirements-runtime.txt
@@ -1,2 +1,20 @@
-pyyaml>=6.0
+# Minimal runtime requirements for lean quick-checks (no heavy native ML stacks)
+
+# Core
+numpy==2.0.2
+pandas==2.3.2
+PyYAML==6.0.2
 pytest>=7.4
+
+# Utilities
+requests==2.32.5
+python-dotenv==1.1.1
+rich==14.1.0
+schedule==1.2.2
+psutil==7.1.0
+
+# Crypto/external
+ccxt==4.5.5
+statsmodels==0.14.5
+scipy==1.13.1
+scikit-learn==1.6.1
