fix: Repair corrupted settings.json and suppress VFS markdown errors
- Fixed malformed JSON syntax in .vscode/settings.json
- Added comprehensive .markdownlintignore to exclude VFS paths
- Disabled markdown linting by default to prevent false positives
- Added proper file and search exclusions for virtual files

--- a/.markdownlintignore
+++ b/.markdownlintignore
@@ -1,8 +1,16 @@
-# Ignore GitHub VFS files
-vscode-vfs://
+# Ignore virtual file system paths
+vscode-vfs://**
+vscode-vfs://**/*
 
-# Ignore generated files
+# Ignore dependencies
 node_modules/
 .venv/
+__pycache__/
+
+# Ignore git
 .git/
-*.bundle
+
+# Ignore build artifacts
+*.pyc
+.pytest_cache/
+.coverage
