--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,22 +19,19 @@
   },
   "markdownlint.run": "onSave",
   "markdownlint.config": {
-    "default": false,
-    "MD013": false,
-    "MD022": false,
-    "MD024": false,
-    "MD029": false,
-    "MD031": false,
-    "MD033": false,
-    "MD040": false,
-    "MD041": false
+    "default": false
   },
   "markdownlint.ignore": [
-    "vscode-vfs://**",
-    "**/node_modules/**",
-    "**/.venv/**"
+    "**/*"
   ],
-  "yaml.validate": true,
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  "python.analysis.extraPaths": [
+    "${workspaceFolder}/.venv/lib/python3.11/site-packages",
+    "${workspaceFolder}"
+  ],
   "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.diagnosticMode": "workspace"
+  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.useLibraryCodeForTypes": true,
+  "python.analysis.autoSearchPaths": true,
+  "yaml.validate": true
 }
