--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,17 @@
 {
+  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
+  "python.venvPath": "${workspaceFolder}/.venv",
+  "python.analysis.extraPaths": [
+    "${workspaceFolder}/.venv/lib/python3.11/site-packages",
+    "${workspaceFolder}"
+  ],
+  "python.analysis.typeCheckingMode": "basic",
+  "python.analysis.diagnosticMode": "workspace",
+  "python.analysis.useLibraryCodeForTypes": true,
+  "python.analysis.autoSearchPaths": true,
+  "python.analysis.exclude": [
+    "/Users/johnbozza/crypto1.0/**"
+  ],
   "files.exclude": {
     "**/.git": true,
     "**/.svn": true,
@@ -9,7 +22,8 @@
     "**/.venv": true,
     "**/node_modules": true,
     "**/__pycache__": true,
-    "**/*.pyc": true
+    "**/*.pyc": true,
+    "**/.pytest_cache": true
   },
   "search.exclude": {
     "**/.venv": true,
@@ -24,14 +38,7 @@
   "markdownlint.ignore": [
     "**/*"
   ],
-  "python.defaultInterpreterPath": "${workspaceFolder}/.venv/bin/python",
-  "python.analysis.extraPaths": [
-    "${workspaceFolder}/.venv/lib/python3.11/site-packages",
-    "${workspaceFolder}"
-  ],
-  "python.analysis.typeCheckingMode": "basic",
-  "python.analysis.diagnosticMode": "workspace",
-  "python.analysis.useLibraryCodeForTypes": true,
-  "python.analysis.autoSearchPaths": true,
+  "python.testing.pytestEnabled": true,
+  "python.testing.unittestEnabled": false,
   "yaml.validate": true
 }
