ci: Harden CI/CD pipeline with pinned dependencies and improved formatting checks
- Pin Black (24.10.0) and Ruff (0.8.0) versions for CI/dev consistency
- Update pyproject.toml: Change line-length from 140 to 88 (Black standard) for all tools
- Update requirements-dev.txt: Add code quality tools (Black, Ruff, pre-commit) with pinned versions
- Enhance GitHub Actions workflow:
  * Use requirements-dev.txt to ensure consistent tool versions between local and CI
  * Add verbose Black check output for clearer failure messages
  * Add Black diff display when formatting check fails
  * Add Ruff linting as part of code quality checks
  * Consolidate test dependencies in requirements-dev.txt

Benefits:
- Eliminates 'works locally but fails in CI' scenarios
- Provides clearer debugging output when formatting/linting fails
- Ensures all developers and CI use same tool versions
- Reduces unexpected formatting changes between environments

--- a/ChainBridge/.github/workflows/trading-bot-ci.yml
+++ b/ChainBridge/.github/workflows/trading-bot-ci.yml
@@ -8,7 +8,7 @@ on:
 
 env:
   PYTHON_VERSION: 3.11
-  
+
 jobs:
   security-scan:
     name: Security & Vulnerability Assessment (CodeQL)
@@ -41,12 +41,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pylint black flake8 mypy safety bandit
+          pip install -r requirements-dev.txt
+          pip install pylint flake8 mypy safety bandit
 
       - name: Normalize markdown fences (dry-run)
         run: |
@@ -56,16 +56,24 @@ jobs:
           else \
             echo 'Normalization script not found'; \
           fi
-      
-      - name: Code formatting check
-        run: black --check --diff .
-      
+
+      - name: Black code formatting check (verbose)
+        run: |
+          python -m black --check --verbose .
+
+      - name: Show Black diff on failure
+        if: failure()
+        run: python -m black --diff .
+
+      - name: Ruff linting
+        run: ruff check . || true
+
       - name: Linting
         run: pylint --rcfile=.pylintrc *.py || true
-      
+
       - name: Type checking
         run: mypy --config-file=pyproject.toml . || true
-      
+
       - name: Security audit
         run: |
           safety check || true
@@ -80,12 +88,12 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      
+
       - name: Validate configuration files
         run: |
           python -c "import yaml; yaml.safe_load(open('config/config.yaml'))"
           python -c "import os,yaml; p='config.yaml'; print('root config exists' if os.path.exists(p) else 'no root config'); (yaml.safe_load(open(p)) if os.path.exists(p) else None); print('YAML root config validated if present')"
-      
+
       - name: Schema validation
         run: |
           if [ -f scripts/validate_config_schema.py ]; then python scripts/validate_config_schema.py; else echo "No schema validator"; fi
@@ -99,18 +107,17 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-      
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest pytest-cov pytest-mock
-      
+          pip install -r requirements-dev.txt
+
       - name: Run tests
         run: |
           if [ -f benson_rsi_bot.py ]; then python benson_rsi_bot.py --test; fi
           if [ -d tests ]; then pytest tests/ -v --cov=. --cov-report=xml; else echo "No tests directory"; fi
-      
+
       - name: Upload coverage
         if: ${{ hashFiles('coverage.xml') != '' }}
         uses: codecov/codecov-action@v3
