--- a/ChainBridge/.pre-commit-config.yaml
+++ b/ChainBridge/.pre-commit-config.yaml
@@ -16,6 +16,6 @@ repos:
     hooks:
       - id: lean-quick-checks
         name: Lean Quick Checks (RSI + Integrator)
-        entry: bash -lc 'make quick-checks'
+        entry: bash -c 'cd "$(git rev-parse --show-toplevel)/ChainBridge" && make quick-checks'
         language: system
         pass_filenames: false
