--- a/ChainBridge/.gitignore
+++ b/ChainBridge/.gitignore
@@ -26,3 +26,8 @@ local_repo_snapshot.bundle
 Dockerfile.*.local
 docker-compose.override.yml
 .venv-lean/
+
+# UI build artifacts and code dumps
+*.zip
+*-source*.txt
+*-full-source.txt
