--- a/ChainBridge/.gitignore
+++ b/ChainBridge/.gitignore
@@ -52,3 +52,21 @@ venv/
 node_modules/
 dist/
 build/
+
+# Coverage / reports
+.coverage
+.coverage.*
+**/.coverage
+htmlcov/
+coverage*/
+reports*/
+
+# Local databases
+*.sqlite3
+chainpay-service/chainpay.db
+chainpay-service/settlement_actions.db
+chainpay-service/*.db
+
+# Caches
+cache/
+ChainBridge/cache/
